# rules-rust-4037-repro

./: BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
src/: lib.rs
